--- a/vercel.json
+++ b/vercel.json
@@ -8,3 +8,12 @@
         { "src": "/(.*)", "status": 404, "dest": "/404" }
       ]
 }
+{
+  "rewrites": [
+    { "source": "/", "destination": "/public/index.html" },
+    { "source": "/blog", "destination": "/index.html" },
+    { "source": "/blog/:path*", "destination": "/:path*" }
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
+}
